--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -5,7 +5,7 @@
 }
 
 .hero{
-    background-image: url('../afbeeldingen/sky.JPG');
+    background-image: url('../afbeeldingen/bg.jpg');
     background-size: cover;
     background-position: center;
     min-height: 100vh;
@@ -27,41 +27,41 @@ header{
             }
         }   
     }
-    .navbar-side{
+}
+.navbar-side{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: -100vw;
+    top: 0;
+    background-color: RGBA(167,104,104);
+    min-width: 100vw;
+    min-height: 50vh;
+    border: 1px solid black;
+    a{
         display: flex;
-        flex-direction: column;
-        position: fixed;
-        right: -81vw;
-        top: 0;
-        background-color: RGBA(167,104,104);
-        min-width: 80vw;
-        min-height: 100vh;
-        border: 1px solid black;
-        a{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 15px;
-            min-height: 10vh;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: RGBA(0,0,0);
-            border-bottom: 1px solid black;
-        } 
-        a:hover{
-            color: RGBA(136,186,186);
-        }
+        justify-content: center;
+        align-items: center;
+        margin-top: 15px;
+        min-height: 10vh;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: RGBA(0,0,0);
+        border-bottom: 1px solid black;
+    } 
+    a:hover{
+        color: RGBA(136,186,186);
     }
-    .active{
-        right: 0;
-    }
-    .close{
-        display: flex;
-        justify-content: flex-end;
-        a{
-            padding-right: 30px;
-            border: none;
-        }
+}
+.active{
+    right: 0;
+}
+.close{
+    display: flex;
+    justify-content: flex-end;
+    a{
+        padding-right: 30px;
+        border: none;
     }
 }
 
@@ -72,24 +72,32 @@ header{
     display: flex;
     flex-direction: row;
     align-items: center;  
-    .welcome{
-        margin: 0 20px;
-        min-height: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        a.button{
-            text-decoration: none;
-            text-align: center;
-            color: RGBA(255,255,255);
-            border-radius: 8px;
-            background-color: RGBA(136,186,186);
-            padding: 1%;
-            margin-top: 1%;
-            width: 30%;
-        }
-    }  
 }
+
+.welcome{
+    margin: 0 20px;
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}  
+
+.button{
+    padding-top: 20px;
+    a{
+        text-decoration: none;
+        text-align: center;
+        color: RGBA(255,255,255);
+        border-radius: 8px;
+        background-color: RGBA(136,186,186);
+        padding: 1%;
+        margin-top: 1%;
+        width: 30%;
+    }
+}
+
+
+
 
 
 
