--- a/persoonlijke website/css/style.css
+++ b/persoonlijke website/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .hero {
-  background-image: url("../afbeeldingen/bg.jpg");
+  background-image: url("../afbeeldingen/sky.jpg");
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -23,19 +23,41 @@ header {
   position: relative;
 }
 
-header nav {
+header .container {
+  min-width: 70vw;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-header nav .hamburger {
-  margin: 30px 0;
+header .container nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-width: 70vw;
+  margin: 0 auto;
 }
 
-header nav .hamburger .menu {
+header .container nav .me {
+  margin: 0 20px;
+}
+
+header .container nav .hamburger {
+  margin: 30px 50px;
+}
+
+header .container nav .hamburger .menu {
   text-decoration: none;
   color: #000000;
 }
@@ -54,7 +76,6 @@ header nav .hamburger .menu {
   background-color: RGBA(167, 104, 104);
   min-width: 100vw;
   min-height: 50vh;
-  border: 1px solid black;
 }
 
 .navbar-side a {
@@ -71,8 +92,11 @@ header nav .hamburger .menu {
   min-height: 10vh;
   text-decoration: none;
   text-transform: uppercase;
-  color: RGBA(0, 0, 0);
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #FFFF;
+}
+
+.navbar-side a .larger {
+  width: 20px;
 }
 
 .navbar-side a:hover {
@@ -98,8 +122,7 @@ header nav .hamburger .menu {
 }
 
 .container {
-  min-width: 80vw;
-  min-height: 50vh;
+  min-width: 70vw;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -113,9 +136,9 @@ header nav .hamburger .menu {
           align-items: center;
 }
 
-.welcome {
+.container .welcome {
   margin: 0 20px;
-  min-height: 100px;
+  min-height: 80vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -123,8 +146,7 @@ header nav .hamburger .menu {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  margin-top: 10%;
 }
 
 .button {
@@ -134,11 +156,41 @@ header nav .hamburger .menu {
 .button a {
   text-decoration: none;
   text-align: center;
-  color: RGBA(255, 255, 255);
   border-radius: 8px;
-  background-color: RGBA(136, 186, 186);
+  background-color: RGBA(136, 186, 186, 0.6);
   padding: 1%;
   margin-top: 1%;
   width: 30%;
+}
+
+.container {
+  max-width: 70vw;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .wrapper {
+  min-height: 100vh;
+}
+
+.container .wrapper .presentation {
+  margin: 20px 0;
+}
+
+.container .wrapper .presentation h1 {
+  text-align: center;
+}
+
+.container .wrapper .presentation h3 {
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
