--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -4,8 +4,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+
+
 .hero{
-    background-image: url('../afbeeldingen/bg.jpg');
+    background-image: url('../afbeeldingen/sky.jpg');
     background-size: cover;
     background-position: center;
     min-height: 100vh;
@@ -16,17 +18,29 @@
 header{
     background-color: RGBA(186,136,136, 0.5);
     position: relative;
-    nav{
+    .container{
+        min-width: 70vw;
+        margin: 0 auto;
         display: flex;
-        justify-content: space-around;
-        .hamburger{
-            margin: 30px 0;
-            .menu{
-                text-decoration: none;
-                color: #000000;
+        flex-direction: row;
+        align-items: center;  
+        nav{
+            display: flex;
+            justify-content: space-between;
+            min-width: 70vw;
+            margin: 0 auto;
+            .me{
+                margin: 0 20px;
             }
-        }   
-    }
+            .hamburger{
+                margin: 30px 50px;
+                .menu{
+                    text-decoration: none;
+                    color: #000000;
+                }
+            }   
+        }
+    }   
 }
 .navbar-side{
     display: flex;
@@ -37,7 +51,6 @@ header{
     background-color: RGBA(167,104,104);
     min-width: 100vw;
     min-height: 50vh;
-    border: 1px solid black;
     a{
         display: flex;
         justify-content: center;
@@ -46,8 +59,10 @@ header{
         min-height: 10vh;
         text-decoration: none;
         text-transform: uppercase;
-        color: RGBA(0,0,0);
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid #FFFF;
+        .larger{
+            width: 20px;
+        }
     } 
     a:hover{
         color: RGBA(136,186,186);
@@ -66,36 +81,53 @@ header{
 }
 
 .container{
-    min-width: 80vw;
-    min-height: 50vh;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;  
+        min-width: 70vw;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center; 
+    .welcome{
+        margin: 0 20px;
+        min-height: 80vh;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10%;
+    }  
 }
 
-.welcome{
-    margin: 0 20px;
-    min-height: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}  
 
 .button{
     padding-top: 20px;
     a{
         text-decoration: none;
         text-align: center;
-        color: RGBA(255,255,255);
         border-radius: 8px;
-        background-color: RGBA(136,186,186);
+        background-color: RGBA(136,186,186, 0.6);
         padding: 1%;
         margin-top: 1%;
         width: 30%;
     }
 }
 
+.container{
+        max-width: 70vw;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center; 
+    .wrapper{
+        min-height: 100vh;
+        .presentation{
+            margin: 20px 0;
+            h1{
+                text-align: center;
+            }
+            h3{
+                text-align: center;
+            }
+        }
+    }
+}
 
 
 
