--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -59,6 +59,7 @@ header{
         min-height: 10vh;
         text-decoration: none;
         text-transform: uppercase;
+        color: RGBA(255, 255, 255);
         border-bottom: 1px solid #FFFF;
         .larger{
             width: 20px;
@@ -102,7 +103,7 @@ header{
         text-decoration: none;
         text-align: center;
         border-radius: 8px;
-        background-color: RGBA(136,186,186, 0.6);
+        background-color: RGBA(136,186,186);
         padding: 1%;
         margin-top: 1%;
         width: 30%;
@@ -155,9 +156,19 @@ header{
                 h4{
                     color: RGBA(136,186,186, 0.6);
                 }
+                .text-margin{
+                    margin: 10px 0;
+                }
             }
         }
     }
+}
+
+.resume{
+    min-height: 100vh;
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 
