--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -202,6 +202,23 @@ header{
     }
 }
 
+.allPictures{
+    display: flex;
+    flex-wrap: wrap;
+    .box{
+        margin: 0 auto;
+        overflow: hidden;
+        .imgOfHead{
+            padding: 2%;
+            max-width: 100%;
+            height: auto;
+            transition: transform .5s ease;
+        }
+    }
+    .box:hover img{
+        transform: scale(1.5);
+    }
+}
 
 
 
