--- a/persoonlijke website/css/style.css
+++ b/persoonlijke website/css/style.css
@@ -20,7 +20,7 @@ h3 {
   background-image: url("../afbeeldingen/sky.jpg");
   background-size: cover;
   background-position: center;
-  min-height: 100vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -264,8 +264,8 @@ header .container nav .hamburger .menu {
   margin: 10px 0;
 }
 
-.newBckgrColor {
-  background: #F5F2E6;
+.bckgrColor {
+  background: #F7F4EB;
 }
 
 .resume {
@@ -302,6 +302,7 @@ header .container nav .hamburger .menu {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-bottom: 10px;
 }
 
 .allPictures .box {
@@ -322,5 +323,40 @@ header .container nav .hamburger .menu {
 .allPictures .box:hover img {
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
+}
+
+.container {
+  max-width: 70vw;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .formWrapper {
+  height: 100vh;
+  margin: 0 auto;
+}
+
+.container .formWrapper form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container .formWrapper form .submit {
+  max-width: 50%;
+  margin: 5% auto;
 }
 /*# sourceMappingURL=style.css.map */
