--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -20,7 +20,7 @@ h3{
     background-image: url('../afbeeldingen/sky.jpg');
     background-size: cover;
     background-position: center;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -179,8 +179,8 @@ header{
     }
 }
 
-.newBckgrColor{
-    background: #F5F2E6;
+.bckgrColor{
+    background: #F7F4EB;
 }
 
 .resume{
@@ -205,6 +205,7 @@ header{
 .allPictures{
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 10px;
     .box{
         margin: 0 auto;
         overflow: hidden;
@@ -221,7 +222,25 @@ header{
 }
 
 
-
+.container{
+    max-width: 70vw;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    .formWrapper{
+        height: 100vh;
+        margin: 0 auto;
+        form{
+            display: flex;
+            flex-direction: column;
+            .submit{
+                max-width: 50%;
+                margin: 5% auto;
+            }
+        }
+    }
+}
 
 
 
