--- a/persoonlijke website/css/style.css
+++ b/persoonlijke website/css/style.css
@@ -139,6 +139,14 @@ h3 {
   border: none;
 }
 
+.parallax {
+  background-image: url("../afbeeldingen/tssnstuk.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 10vh;
+}
+
 .whoAmI {
   width: 70vw;
   margin: 0 auto;
@@ -192,10 +200,6 @@ h3 {
   margin: 10px 0;
 }
 
-.bckgrColor {
-  background: #F7F4EB;
-}
-
 .resume {
   width: 70vw;
   margin: 0 auto;
@@ -223,6 +227,14 @@ h3 {
 
 .resume li .textOpmaak {
   font-size: 0.66em;
+}
+
+.parallax1 {
+  background-image: url("../afbeeldingen/squares.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 10vh;
 }
 
 .templates {
@@ -257,6 +269,14 @@ h3 {
 .templates .allPictures .box:hover img {
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
+}
+
+.parallax2 {
+  background-image: url("../afbeeldingen/vino.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 10vh;
 }
 
 .formWrapper {
