--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -101,6 +101,14 @@ h3{
     }
 }
 
+.parallax{
+    background-image: url('../afbeeldingen/tssnstuk.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    height: 10vh;
+}
+
 .whoAmI{
     @include container;
     min-height: 100vh;
@@ -141,9 +149,6 @@ h3{
     }
 }
 
-.bckgrColor{
-    background: #F7F4EB;
-}
 
 .resume{
     @include container;
@@ -162,6 +167,14 @@ h3{
             font-size: 0.66em;
         }
     }
+}
+
+.parallax1{
+    background-image: url('../afbeeldingen/squares.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    height: 10vh;
 }
 
 .templates{
@@ -185,7 +198,15 @@ h3{
         }
     }
 }
- 
+
+.parallax2{
+    background-image: url('../afbeeldingen/vino.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    height: 10vh;
+}
+
 .formWrapper{
     @include container;
     height: 100vh;
