--- a/persoonlijke website/css/style.css
+++ b/persoonlijke website/css/style.css
@@ -162,7 +162,7 @@ h3 {
 }
 
 .whoAmI .presentation {
-  margin: 5% 0;
+  margin: 3% 0;
 }
 
 .whoAmI .presentation hr {
@@ -177,8 +177,12 @@ h3 {
   font-size: 0.9em;
 }
 
+.whoAmI .core .left-text-extra {
+  display: none;
+}
+
 .whoAmI .core .linkedinPict {
-  margin: 20px 0;
+  margin: 2% 0;
   text-align: center;
 }
 
@@ -197,7 +201,46 @@ h3 {
 }
 
 .whoAmI .core .right-text .text-margin {
-  margin: 10px 0;
+  margin: 1% 0;
+}
+
+@media screen and (min-width: 1224px) {
+  .core {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .core .left-text {
+    display: none;
+  }
+  .core .left-text-extra {
+    width: 33%;
+    display: block;
+  }
+  .core .linkedinPict {
+    width: 33%;
+  }
+  .core .linkedinPict img {
+    min-width: 90%;
+  }
+  .core .right-text {
+    width: 33%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: right;
+  }
 }
 
 .resume {
