--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -116,7 +116,7 @@ h3{
     flex-direction: column;
     margin: 0 auto;
     .presentation{
-        margin: 5% 0;
+        margin: 3% 0;
         hr{
             margin: 5% 0;
        }
@@ -128,8 +128,11 @@ h3{
                 font-size: 0.9em;
             }
         }
+        .left-text-extra{
+            display: none;
+        }
         .linkedinPict{
-        margin: 20px 0;
+            margin: 2% 0;
             text-align: center;
             img{
                 border-radius: 50%;
@@ -143,12 +146,38 @@ h3{
                 color: RGBA(136,186,186, 0.6);
             }
             .text-margin{
-                margin: 10px 0;
+                margin: 1% 0;
             }
         }
     }
 }
 
+@media screen and (min-width : 1224px){
+    .core{
+        display: flex;
+        flex-direction: row;
+        .left-text{
+            display: none;
+        }
+        .left-text-extra{
+            width: 33%;
+            display: block;
+        }
+        .linkedinPict{
+            width: 33%;
+            img{
+                min-width: 90%;
+            }
+        }
+        .right-text{
+            width: 33%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: right;
+        }
+    }    
+}
 
 .resume{
     @include container;
