--- a/persoonlijke website/css/style.css
+++ b/persoonlijke website/css/style.css
@@ -177,12 +177,8 @@ h3 {
   font-size: 0.9em;
 }
 
-.whoAmI .core .left-text-extra {
-  display: none;
-}
-
 .whoAmI .core .linkedinPict {
-  margin: 2% 0;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -204,6 +200,15 @@ h3 {
   margin: 1% 0;
 }
 
+@media screen and (max-width: 1223px) {
+  .left-text {
+    display: block;
+  }
+  .mobile-visible {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 1224px) {
   .core {
     display: -webkit-box;
@@ -217,12 +222,14 @@ h3 {
   .core .left-text {
     display: none;
   }
-  .core .left-text-extra {
+  .core .mobile-visible {
     width: 33%;
     display: block;
+    text-align: center;
   }
   .core .linkedinPict {
     width: 33%;
+    padding: 0 2%;
   }
   .core .linkedinPict img {
     min-width: 90%;
@@ -236,9 +243,6 @@ h3 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     text-align: right;
   }
 }
