--- a/persoonlijke website/css/style.scss
+++ b/persoonlijke website/css/style.scss
@@ -128,11 +128,8 @@ h3{
                 font-size: 0.9em;
             }
         }
-        .left-text-extra{
-            display: none;
-        }
         .linkedinPict{
-            margin: 2% 0;
+            margin: 0 auto;
             text-align: center;
             img{
                 border-radius: 50%;
@@ -152,6 +149,15 @@ h3{
     }
 }
 
+@media screen and (max-width : 1223px){
+    .left-text{
+        display: block;
+    }
+    .mobile-visible{
+        display: none;
+    } 
+}
+
 @media screen and (min-width : 1224px){
     .core{
         display: flex;
@@ -159,12 +165,14 @@ h3{
         .left-text{
             display: none;
         }
-        .left-text-extra{
+        .mobile-visible{
             width: 33%;
             display: block;
+            text-align: center;
         }
         .linkedinPict{
             width: 33%;
+            padding: 0 2%;
             img{
                 min-width: 90%;
             }
@@ -173,7 +181,6 @@ h3{
             width: 33%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             text-align: right;
         }
     }    
